--- a/main_file.lyx
+++ b/main_file.lyx
@@ -9733,6 +9733,10 @@ Search
 Napotkane problemy
 \end_layout
 
+\begin_layout Standard
+mkv trik
+\end_layout
+
 \begin_layout Section
 Wyniki testów
 \end_layout
@@ -10436,7 +10440,7 @@ AllShare PC
 \begin_inset Text
 
 \begin_layout Plain Layout
-?
++
 \end_layout
 
 \end_inset
@@ -11299,8 +11303,15 @@ nd - nie dotyczy
 \end_layout
 
 \begin_layout Standard
-Dokładne objaśnienie kwestii technicznych i wykrytych niezgodności oraz
- błędów (poprawionych) w trakcie testowania 
+Dokładne objaśnienie kwestii technicznych (w tym błędów) dotyczących odtwarzaczó
+w została przedstawiona w rozdziale 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "chap:Przegląd-oprogramowania-UPnP"
+
+\end_inset
+
+.
 \end_layout
 
 \begin_layout Chapter
@@ -11318,11 +11329,22 @@ name "chap:Przegląd-oprogramowania-UPnP"
 \end_layout
 
 \begin_layout Standard
-wrew
+Oprogramowanie UPnP AV oraz DLNA umożliwia w bardzo prosty sposób odtwarzać
+ materiały multimedialne w sieci lokalnej.
+ Serwerów multimedialnych w sieci internetowej można znaleźć stosunkowo
+ dużo.
+ Natomiast odtwarzacze UPnP AV / DLNA są zazwyczaj wbudowane w większość
+ standardowych odtwarzaczy dostarczanych wraz z systemem operacyjnym urządzenia.
 \end_layout
 
 \begin_layout Standard
-dqwdq
+W niniejszym rozdziale zostały zestawione, przetestowane przez autora, programy
+ zgodne ze standardem UPnP AV lub DLNA.
+ W kolejnych podrozdziałach wyróżnione zostały możliwości serwerów mutlimedialny
+ch, a następnie odtwarzaczy multimedialnych.
+ Drugi z podrozdziałów zawiera zestawienie zarówno oprogramowania dla komputerów
+ typu PC, jak i odtwarzaczy sprawdzanych w sprzęcie telewizyjnym, tj.
+ telewizorach i odtwarzaczach Blu-ray.
 \end_layout
 
 \begin_layout Section
@@ -11330,7 +11352,146 @@ Porównanie oprogramowania serwerów UPnP AV i DLNA
 \end_layout
 
 \begin_layout Standard
-fewefe
+Ilość aplikacji udostępniających multimedia jest bardzo dużo.
+ Prawdopodobnie zbyt duża, aby zwykły użytkownik był w stanie podjąć prosty
+ i zarazem dobry wybór.
+ Ich ilość jest spowodowana jakością wykonania oraz nie spełnieniem warunku,
+ którym jest odtwarzanie treści na urządzeniach różnych producentów.
+ Warunkiem prawdopodobnie niemożliwym do spełnienia.
+ W przypadku, gdy sieć domowa posiada odtwarzacze tylko jednego producenta
+ (czyli teoretycznie powinny być zgodne), wystarczy odnaleźć serwer, który
+ udostępni zawartość, a odtwarzacz będzie ją poprawnie prezentował.
+ W kolejnych sekcjach niniejszego podrozdziału znajduje się krótki opis
+ kilku wybranych serwerów multimedialnych.
+\end_layout
+
+\begin_layout Subsection
+Oprogramowanie Samsung AllShare
+\end_layout
+
+\begin_layout Standard
+W przypadku oprogramowania firmy Samsung do udostępniania multimediów wykorzysty
+wane są dwa urządzenia.
+ Komputery typu PC z systemem operacyjnym Windows (XP/Vista/7) oraz smartfony
+ tej firmy.
+\end_layout
+
+\begin_layout Standard
+Aplikacja udostępnia wszystkie rodzaje multimediów ujęte w specyfikacji
+ DLNA, czyli obrazy, muzykę oraz filmy.
+ Ma możliwość kodowania materiałów w locie, udostępniania napisów w postaci
+ SubRip to jest z rozszerzeniem *.srt.
+ Napisy muszą mieć taką samą nazwę plików jak film.
+\end_layout
+
+\begin_layout Standard
+Program, w wersji dla systemu Microsoft Windows, umożliwia dodanie następujących
+ plików wideo do listy odtwarzania: *.3GP, *.ASF, *.AVI, *.DIVX, *.F4V, *.FLV,
+ *.M1V, *.M2TS, *.M4V, *.MKV, *.MOV, *.MP4, *.MPEG, *.MPG, *.MPGV, *.MPV, *.MTS, *.PS,
+ *.QT, *.RM, *.RMVB, *.SVI, *.TP, *.TRP, *.TS, *.VOB, *.VRO, *.WMV.
+ Pliki zdjęć mogą posiadać rozszerzenia: *.BMP, *.GIF, *.JPEG, *.JPG, *.MPO,
+ *.PNG.
+ Ostatnie pliki, audio, mogą zostać dodane spełniające następujące parametry
+ rozszerzenia: *.3GA, *.AAC, *.AC3, *.AU, *.AMR, *.APE, *.DAT, *.FLAC, *.LPCM, *.M4A,
+ *.MP2, *.MP3, *.MPA, *.OGG, *.PCM, *.RA, *.VOX, *.WAV, *.WMA.
+ Przedstawione listy są bardzo długie i wydaje się, że spełniają wszystkie
+ możliwe wymaganie, jednakże pomimo iż tak dużą ilość rodzajów plików można
+ dodać, to większość z nich jest udostępniana w taki sposób, że odtwarzacz
+ nie umie ich zaprezentować użytkownikowi (pojawia się komunikat niepoprawny
+ plik).
+ W przypadku napisów autor potrafił uruchomić napisy jedynie do filmów z
+ rozszerzeniem *.AVI oraz *.DIVX.
+ W pozostałych przypadkach plik z napisami nie był wykryty przez odtwarzacz.
+\end_layout
+
+\begin_layout Standard
+Oprogramowanie mobilne, dla systemu Android, nie ma możliwości przekazywania
+ napisów dla urządzeń innych niż Samsung.
+ Autor nie odnalazł listy z rodzajami plików do udostępnienia, lecz jest
+ ona prawdopodobnie taka sama jak dla wersji PC serwera.
+ Jednakże serwer mobilny, pliki które współdzieli, udostępnia w wyraźnie
+ inny, lepszy sposób niż ma to miejsce w przypadku wersji komputerowej.
+ Wszystkie pliki, które zostały dodane do udostępniania były poprawnie otwierane
+ przez odtwarzacze DLNA, zarówno firmy Samsung, jak i innych producentów.
+\end_layout
+
+\begin_layout Subsection
+Nero MediaHome 4
+\end_layout
+
+\begin_layout Standard
+Nero MediaHome 4 jest to płatne oprogramowanie (do testów wykorzysywana
+ była wersja próbna) udostępniające multimedia, podobnie jak większość aplikacji
+, takie które są wyspecyfikowane w technologii DLNA.
+ W pliku pomocy programu zostały przedstawione obsługiwane rozszerzenia.
+ Dla plików audio są to: *.AIFF, *.AIF, *.MP1, *.MP2, *.MP3, *.MPA, *.MP4, *.AC3,
+ *.AAC, *.M4A, *.MP4, *.WAV, *.WAVE, *.WMA, *.OGG, OGM, *.LPCM, *.PCM, *.L16.
+ Dla plików obrazów: *.BMP, *.GIF, *.JPEG, *.JPG, *.JPE, *.PNG, *.TIFF, *.TIF, *.WMF.
+ Dla plików wideo: *.3GP, *.AVI, *.DIVX, *.ASF, *.DV, *.MPEG, *.MPG, *.MPE, *.M1V,
+ *.DAT, *.MPEG2, *.MPG2, *.M2V, *.PVA, *.MOD, *.TOD, *.VOB, *.MP2P, *.PS, *.MP2T, *.TS,
+ MP4, *.M4P, *.MOV, *.QT, *.WMV, *.DVR-MS, *.FLV, *.MP4.
+ Wszystkie z wymienionych formatów mogą być transkodowane do innych formatów
+ znajdujących się na liście.
+ Lista plików dość długa, jednakże w trakcie sprawdzania programu autor
+ wykrył fakt, że w rzeczywistości odtwarzanie materiału zależy od pakietu
+ kodeków zainstalowanych w komputerze.
+ Program prawdopodobnie dostarcza kodeki, które odtwarzają wspomniane wyżej
+ formaty, jednakże jeżeli są zainstalowane kodeki, które odtwarzają inne
+ formaty, wówczas aplikacja również je wspiera.
+ Jest to zachowanie o tyle dziwne, że w przypadku braku transkodowania,
+ dekoder formatu multimedialnego nie jest wykorzystywany.
+\end_layout
+
+\begin_layout Standard
+W żadnym materiale dostarczanym wraz z Nero MediaHome 4 nie jest uwzględnione
+ wsparcie dla napisów do filmów.
+ Jest ono jednak zaimplementowane, a napisy muszą być w jednym z najpopularniejs
+zych formatów, którymi w tym wypadku są SubRip lub MicroDVD.
+\end_layout
+
+\begin_layout Standard
+Materiały udostępniane przez opisywany serwer poprawnie odtwarzają wszystkie
+ przetestowane urządzenia.
+ Serwer ten potrafi również strumieniować materiał telewizyjny z tunera
+ DVB-T na żywo do innych urządzeń (funkcja nie została przetestowana).
+ Można stwierdzić, że jest to kompletny odtwarzacz multimediów, z jedną
+ wadą, którą jest brak wieloplatformowości.
+ Drugą cechą, która może odstraszyć przeciętnego użytkownika jest cena oprogramo
+wania.
+ Biorąc pod uwagę, że większośc odtwarzaczy jest darmowych, jest to niewątpliwie
+ wada.
+\end_layout
+
+\begin_layout Subsection
+MiniDLNA
+\end_layout
+
+\begin_layout Standard
+fwe
+\end_layout
+
+\begin_layout Subsection
+WildShare
+\end_layout
+
+\begin_layout Standard
+dqwd
+\end_layout
+
+\begin_layout Subsection
+PS3 Media Server
+\end_layout
+
+\begin_layout Standard
+weew
+\end_layout
+
+\begin_layout Subsection
+Coherence Video
+\end_layout
+
+\begin_layout Standard
+dweew
 \end_layout
 
 \begin_layout Section
@@ -11357,7 +11518,7 @@ vlc
 jakie id
 \end_layout
 
-\begin_layout Subsection
+\begin_layout Subsubsection
 Różnice działania odtwarzaczy różnych producentów
 \end_layout
 
@@ -11365,8 +11526,25 @@ Różnice działania odtwarzaczy różnych producentów
 ffwefe
 \end_layout
 
-\begin_layout Section
+\begin_layout Subsection
 Obsługa standardu
+\end_layout
+
+\begin_layout Chapter*
+Podsumowanie
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+addcontentsline{toc}{chapter}{Podsumowanie}
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Bibliography
